// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App App component should match the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App--header"
  >
    <h1
      className="App--h1"
    >
      Mix It Up
    </h1>
    <Nav
      totalUserRecipes={0}
    />
  </header>
  <Switch>
    <Route
      exact={true}
      path="/desserts"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/my-recipes"
      render={[Function]}
    />
    <Route
      path="/my-recipes/:id"
      render={[Function]}
    />
    <Route
      path="/desserts/:id"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/"
      render={[Function]}
    />
    <Route
      component={[Function]}
    />
  </Switch>
  <div
    className="App--div-attribution"
  >
    <p>
      Recipe search powered by
      <a
        className="App--div-anchor"
      >
        <img
          alt="Yummly"
        />
      </a>
    </p>
  </div>
</div>
`;

exports[`App App component should match the snapshot when loading 1`] = `
<div
  className="App"
>
  <header
    className="App--header"
  >
    <h1
      className="App--h1"
    >
      Mix It Up
    </h1>
    <Nav
      totalUserRecipes={0}
    />
  </header>
  <Loading />
  <Switch>
    <Route
      exact={true}
      path="/desserts"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/my-recipes"
      render={[Function]}
    />
    <Route
      path="/my-recipes/:id"
      render={[Function]}
    />
    <Route
      path="/desserts/:id"
      render={[Function]}
    />
    <Route
      exact={true}
      path="/"
      render={[Function]}
    />
    <Route
      component={[Function]}
    />
  </Switch>
  <div
    className="App--div-attribution"
  >
    <p>
      Recipe search powered by
      <a
        className="App--div-anchor"
      >
        <img
          alt="Yummly"
        />
      </a>
    </p>
  </div>
</div>
`;
